# MetaNN

./: .gitignore  CMakeLists.txt
MetaNN/data/facilities/: allocators.h  continuous_memory.h
MyTests/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt
Tests/DataOpTest/: CMakeLists.txt
Tests/DataOpTest/data/: CMakeLists.txt
Tests/DataOpTest/operation/: CMakeLists.txt
Tests/LayerTest/: CMakeLists.txt
Tests/LayerTest/composite/: CMakeLists.txt
Tests/LayerTest/principal/: CMakeLists.txt
Tests/LayerTest/recurrent/: CMakeLists.txt
Tests/OtherTests/: CMakeLists.txt
Tests/OtherTests/facilities/: CMakeLists.txt
Tests/OtherTests/model/: CMakeLists.txt
Tests/OtherTests/policies/: CMakeLists.txt
